CategoryController documentation
